update py functions

--- a/NetworkAnalysis/ActivityQuality/StandardRef.ipynb
+++ b/NetworkAnalysis/ActivityQuality/StandardRef.ipynb
@@ -10,7 +10,7 @@
     "import pandas as pd\n",
     "import os\n",
     "\n",
-    "def process_excel_data(base_path, excel_filename):\n",
+    "def process_activity_recording_to_csv(base_path, excel_filename):\n",
     "    # Load the Excel file\n",
     "    excel_path = os.path.join(base_path, excel_filename)\n",
     "    sheets = pd.read_excel(excel_path, sheet_name=None)  # Load all sheets into a dictionary\n",
@@ -84,7 +84,7 @@
     "# Example usage:\n",
     "base_path = '/Users/liufanling/Library/CloudStorage/OneDrive-Personal/1 UC DAVIS/2024 Summer/CSRA/QualityCheck/QuickCheck'\n",
     "excel_filename = 'simple_check.xlsx'\n",
-    "process_excel_data(base_path, excel_filename)"
+    "process_activity_recording_to_csv(base_path, excel_filename)"
    ]
   },
   {
@@ -180,77 +180,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# import os\n",
-    "# import pandas as pd\n",
-    "\n",
-    "# def read_csv_as_str(file_path):\n",
-    "#     # Read CSV file with specific columns treated as string type\n",
-    "#     return pd.read_csv(file_path, dtype={\n",
-    "#         'Run_ID': str, 'DIV': str, 'Well': str,\n",
-    "#         'NeuronType': str, 'Chip_ID': str\n",
-    "#     })\n",
-    "\n",
-    "# def adjust_and_copy_csvs(source_dir, destination_dir):\n",
-    "#     # Ensure the destination directory exists\n",
-    "#     os.makedirs(destination_dir, exist_ok=True)\n",
-    "    \n",
-    "#     # Iterate over folders in the source directory\n",
-    "#     for folder in os.listdir(source_dir):\n",
-    "#         folder_path = os.path.join(source_dir, folder)\n",
-    "#         if os.path.isdir(folder_path) and not folder.startswith('.'):\n",
-    "#             # Define paths for activity and network CSVs\n",
-    "#             activity_csv_path = os.path.join(folder_path, 'Compiled_ActivityScan.csv')\n",
-    "#             network_csv_path = os.path.join(folder_path, 'Compiled_Networks.csv')\n",
-    "#             output_folder = os.path.join(destination_dir, folder)\n",
-    "#             os.makedirs(output_folder, exist_ok=True)  # Create corresponding folder in destination\n",
-    "            \n",
-    "#             # Process Network CSV\n",
-    "#             if os.path.exists(network_csv_path):\n",
-    "#                 df_network = read_csv_as_str(network_csv_path)\n",
-    "#                 # Standardize 'NeuronType' values and strip spaces\n",
-    "#                 df_network['NeuronType'] = df_network['NeuronType'].str.strip().replace(regex={r'^.*WT.*$': 'WT'})\n",
-    "#                 # Save the modified CSV to the destination path\n",
-    "#                 df_network.to_csv(os.path.join(output_folder, 'Compiled_Networks.csv'), index=False)\n",
-    "            \n",
-    "#             # Process Activity CSV\n",
-    "#             if os.path.exists(activity_csv_path):\n",
-    "#                 df_activity = read_csv_as_str(activity_csv_path)\n",
-    "#                 # Standardize 'NeuronType' values and rename columns\n",
-    "#                 df_activity['NeuronType'] = df_activity['NeuronType'].str.strip().replace(regex={r'^.*WT.*$': 'WT'})\n",
-    "#                 if 'Active_Electrodes' in df_activity.columns and 'Active_area' not in df_activity.columns:\n",
-    "#                     df_activity.rename(columns={'Active_Electrodes': 'Active_area'}, inplace=True)\n",
-    "#                 # Save the modified CSV to the destination path\n",
-    "#                 df_activity.to_csv(os.path.join(output_folder, 'Compiled_ActivityScan.csv'), index=False)\n",
-    "\n",
-    "# def merge_activity_data_and_update_networks(homocheck_dir, quickcheck_dir):\n",
-    "#     # Iterate over folders and merge activity data where necessary\n",
-    "#     for folder in os.listdir(homocheck_dir):\n",
-    "#         homo_path = os.path.join(homocheck_dir, folder)\n",
-    "#         activity_csv_path = os.path.join(homo_path, 'Compiled_ActivityScan.csv')\n",
-    "        \n",
-    "#         # Update and merge data if additional fields are available\n",
-    "#         if os.path.exists(activity_csv_path):\n",
-    "#             df_homo = read_csv_as_str(activity_csv_path)\n",
-    "#             quick_path = os.path.join(quickcheck_dir, folder, 'Activity', 'Compiled_ActivityScan.csv')\n",
-    "#             if os.path.exists(quick_path):\n",
-    "#                 df_quick = read_csv_as_str(quick_path)\n",
-    "#                 if 'Active_area' in df_quick.columns:\n",
-    "#                     merged_df = pd.merge(df_homo, df_quick[['Well', 'DIV', 'Chip_ID', 'Active_area']],\n",
-    "#                                          on=['Well', 'DIV', 'Chip_ID'], how='left')\n",
-    "#                     merged_df.to_csv(activity_csv_path, index=False)\n",
-    "\n",
-    "# def process_datasets(source_dir, destination_dir, quickcheck_dir):\n",
-    "#     # Adjust, copy, and merge datasets as required\n",
-    "#     adjust_and_copy_csvs(source_dir, destination_dir)\n",
-    "#     merge_activity_data_and_update_networks(destination_dir, quickcheck_dir)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 46,
    "metadata": {},
    "outputs": [],
@@ -271,7 +200,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "def preprocess_excel(file_path, output_path):\n",
+    "def make_reffile(file_path, output_path):\n",
     "    # Load the Excel file with all sheets\n",
     "    xls = pd.ExcelFile(file_path)\n",
     "    \n",
@@ -302,7 +231,7 @@
     "# Example usage\n",
     "source_excel_path = '/Users/liufanling/Library/CloudStorage/OneDrive-Personal/1 UC DAVIS/2024 Summer/CSRA/QualityCheck/Reffiles/selected_Check.xlsx'\n",
     "destination_excel_path = '/Users/liufanling/Library/CloudStorage/OneDrive-Personal/1 UC DAVIS/2024 Summer/CSRA/QualityCheck/Reffiles/Reffile.xlsx'\n",
-    "preprocess_excel(source_excel_path, destination_excel_path)"
+    "make_reffile(source_excel_path, destination_excel_path)"
    ]
   },
   {
