add plot_between_lines function for visualizing homogeneity in multiple lines compared to central value

--- a/NetworkAnalysis/ActivityQuality/betweengroup_homogeneity_check.ipynb
+++ b/NetworkAnalysis/ActivityQuality/betweengroup_homogeneity_check.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +306,7 @@
        "[5 rows x 28 columns]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +326,7 @@
        "(694, 28)"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,6 +336,27 @@
     "wt_data = data[data['NeuronType'] == 'WT']\n",
     "wt_data['DIV'] = wt_data['DIV'].astype('int')\n",
     "wt_data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# store WT data at specific path\n",
+    "wt_data.to_csv('/Users/liufanling/Library/CloudStorage/OneDrive-Personal/1 UC DAVIS/CSRA/QualityCheck/HomoCheck/wt_data.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "other_data = data[data['NeuronType'] != 'WT']\n",
+    "other_data['DIV'] = other_data['DIV'].astype('int')\n",
+    "other_data.to_csv('/Users/liufanling/Library/CloudStorage/OneDrive-Personal/1 UC DAVIS/CSRA/QualityCheck/HomoCheck/other_data.csv', index=False)"
    ]
   },
   {
@@ -3110,16 +3131,6 @@
     "    trial_means = basic_data.groupby('Trial')[feature].mean()\n",
     "    if grubbs_test(trial_means):\n",
     "        print(f\"Outlier detected in feature {feature}\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 107,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# store WT data at specific path\n",
-    "wt_data.to_csv('/Users/liufanling/Library/CloudStorage/OneDrive-Personal/1 UC DAVIS/CSRA/QualityCheck/HomoCheck/wt_data.csv', index=False)"
    ]
   },
   {
