--- a/NetworkAnalysis/ActivityQuality/activity_outlier_filter.ipynb
+++ b/NetworkAnalysis/ActivityQuality/activity_outlier_filter.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,11 +24,23 @@
     "    data_outliers_unique = data_outliers[['Chip_ID', 'Well', 'NeuronType']].drop_duplicates()\n",
     "    return data_outliers_unique\n",
     "\n",
+    "# def iqr_filter(datapath):\n",
+    "#     data = pd.read_csv(datapath)\n",
+    "#     data_subset = data[data['DIV'] > 7].copy()\n",
+    "#     Q1 = data_subset.groupby('DIV')['Active_area'].transform(lambda x: x.quantile(0.25))\n",
+    "#     Q3 = data_subset.groupby('DIV')['Active_area'].transform(lambda x: x.quantile(0.75))\n",
+    "#     IQR = Q3 - Q1\n",
+    "#     lower_bound = Q1 - 1.5 * IQR\n",
+    "#     upper_bound = Q3 + 1.5 * IQR\n",
+    "#     data_iqr_outliers = data_subset[(data_subset['Active_area'] < lower_bound) | (data_subset['Active_area'] > upper_bound)]\n",
+    "#     data_iqr_outliers_unique = data_iqr_outliers[['Chip_ID', 'Well', 'NeuronType']].drop_duplicates()\n",
+    "#     return data_iqr_outliers_unique\n",
+    "\n",
     "def iqr_filter(datapath):\n",
     "    data = pd.read_csv(datapath)\n",
     "    data_subset = data[data['DIV'] > 7].copy()\n",
-    "    Q1 = data_subset.groupby('DIV')['Active_area'].transform(lambda x: x.quantile(0.25))\n",
-    "    Q3 = data_subset.groupby('DIV')['Active_area'].transform(lambda x: x.quantile(0.75))\n",
+    "    Q1 = data_subset.groupby(['DIV', 'NeuronType'])['Active_area'].transform(lambda x: x.quantile(0.25))\n",
+    "    Q3 = data_subset.groupby(['DIV', 'NeuronType'])['Active_area'].transform(lambda x: x.quantile(0.75))\n",
     "    IQR = Q3 - Q1\n",
     "    lower_bound = Q1 - 1.5 * IQR\n",
     "    upper_bound = Q3 + 1.5 * IQR\n",
@@ -36,10 +48,11 @@
     "    data_iqr_outliers_unique = data_iqr_outliers[['Chip_ID', 'Well', 'NeuronType']].drop_duplicates()\n",
     "    return data_iqr_outliers_unique\n",
     "\n",
+    "\n",
     "def z_score_filter(datapath):\n",
     "    data = pd.read_csv(datapath)\n",
     "    data_subset = data[data['DIV'] > 7].copy()\n",
-    "    data_subset['Z_score'] = data_subset.groupby('DIV')['Active_area'].transform(lambda x: stats.zscore(x))\n",
+    "    data_subset['Z_score'] = data_subset.groupby(['DIV', 'NeuronType'])['Active_area'].transform(lambda x: stats.zscore(x))\n",
     "    z_threshold = 2\n",
     "    data_z_outliers = data_subset[(data_subset['Z_score'] > z_threshold) | (data_subset['Z_score'] < -z_threshold)]\n",
     "    data_z_outliers_unique = data_z_outliers[['Chip_ID', 'Well', 'NeuronType']].drop_duplicates()\n",
@@ -63,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,6 +91,76 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Chip_ID</th>\n",
+       "      <th>Well</th>\n",
+       "      <th>NeuronType</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>48</th>\n",
+       "      <td>M07299</td>\n",
+       "      <td>3</td>\n",
+       "      <td>HOM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>85</th>\n",
+       "      <td>M08034</td>\n",
+       "      <td>6</td>\n",
+       "      <td>HET</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>188</th>\n",
+       "      <td>M07299</td>\n",
+       "      <td>5</td>\n",
+       "      <td>HET</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Chip_ID  Well NeuronType\n",
+       "48   M07299     3        HOM\n",
+       "85   M08034     6        HET\n",
+       "188  M07299     5        HET"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z_score_filter(knct4_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [
@@ -86,21 +169,24 @@
      "output_type": "stream",
      "text": [
       "Outliers identified by Threshold Filter:\n",
-      "   Chip_ID  Well NeuronType\n",
-      "46  M07299     1        HOM\n",
-      "48  M07299     3        HOM\n",
+      "  Chip_ID  Well NeuronType\n",
+      "0  M07299     1        HOM\n",
+      "1  M07299     3        HOM\n",
       "\n",
       "Outliers identified by IQR Filter:\n",
-      "   Chip_ID  Well NeuronType\n",
-      "71  M07299     3        HOM\n",
-      "85  M08034     6        HET\n",
+      "  Chip_ID  Well NeuronType\n",
+      "0  M07299     1        HOM\n",
+      "1  M07299     3        HOM\n",
+      "2  M07299     5        HET\n",
+      "3  M08026     4        HET\n",
+      "4  M08034     3        HOM\n",
+      "5  M08034     6        HET\n",
       "\n",
       "Outliers identified by Z-score Filter:\n",
-      "    Chip_ID  Well NeuronType\n",
-      "48   M07299     3        HOM\n",
-      "85   M08034     6        HET\n",
-      "100  M08026     4        HET\n",
-      "128  M08034     3        HOM\n"
+      "  Chip_ID  Well NeuronType\n",
+      "0  M07299     3        HOM\n",
+      "1  M07299     5        HET\n",
+      "2  M08034     6        HET\n"
      ]
     },
     {
@@ -144,18 +230,24 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>M07299</td>\n",
+       "      <td>5</td>\n",
+       "      <td>HET</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
        "      <td>M08026</td>\n",
        "      <td>4</td>\n",
        "      <td>HET</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>4</th>\n",
        "      <td>M08034</td>\n",
        "      <td>3</td>\n",
        "      <td>HOM</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>5</th>\n",
        "      <td>M08034</td>\n",
        "      <td>6</td>\n",
        "      <td>HET</td>\n",
@@ -168,9 +260,10 @@
        "  Chip_ID  Well NeuronType\n",
        "0  M07299     1        HOM\n",
        "1  M07299     3        HOM\n",
-       "2  M08026     4        HET\n",
-       "3  M08034     3        HOM\n",
-       "4  M08034     6        HET"
+       "2  M07299     5        HET\n",
+       "3  M08026     4        HET\n",
+       "4  M08034     3        HOM\n",
+       "5  M08034     6        HET"
       ]
      },
      "execution_count": 12,
@@ -185,81 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Outliers identified by Threshold Filter:\n",
-      "    Chip_ID  Well\n",
-      "59   M07036     6\n",
-      "66   M07309     1\n",
-      "68   M07309     3\n",
-      "152  M07036     3\n",
-      "156  M07301     1\n",
-      "163  M07309     2\n",
-      "\n",
-      "Outliers identified by IQR Filter:\n",
-      "    Chip_ID  Well\n",
-      "59   M07036     6\n",
-      "116  M07309     3\n",
-      "\n",
-      "Outliers identified by Z-score Filter:\n",
-      "    Chip_ID  Well\n",
-      "59   M07036     6\n",
-      "164  M07309     3\n"
-     ]
-    }
-   ],
-   "source": [
-    "combine_filters(syngap_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 97,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Outliers identified by Threshold Filter:\n",
-      "    Chip_ID  Well\n",
-      "8    M07036     3\n",
-      "11   M07036     6\n",
-      "12   M07301     1\n",
-      "18   M07309     1\n",
-      "19   M07309     2\n",
-      "20   M07309     3\n",
-      "24   M06691     1\n",
-      "30   M07036     1\n",
-      "31   M07036     2\n",
-      "33   M07036     4\n",
-      "130  M07036     5\n",
-      "181  M07301     2\n",
-      "\n",
-      "Outliers identified by IQR Filter:\n",
-      "Empty DataFrame\n",
-      "Columns: [Chip_ID, Well]\n",
-      "Index: []\n",
-      "\n",
-      "Outliers identified by Z-score Filter:\n",
-      "Empty DataFrame\n",
-      "Columns: [Chip_ID, Well]\n",
-      "Index: []\n"
-     ]
-    }
-   ],
-   "source": [
-    "combine_filters(therapy_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -268,41 +287,44 @@
      "text": [
       "Outliers identified by Threshold Filter:\n",
       "   Chip_ID  Well NeuronType\n",
-      "0   M06804     1       FxWT\n",
-      "1   M06804     2       FxWT\n",
+      "0   M06804     1         WT\n",
+      "1   M06804     2         WT\n",
       "2   M06804     4      FxHET\n",
-      "3   M06844     1       FxWT\n",
+      "3   M06844     1         WT\n",
       "4   M06844     4      FxHET\n",
       "5   M06844     5      FxHET\n",
-      "6   M07038     2       FxWT\n",
-      "7   M07038     3       FxWT\n",
+      "6   M07038     2         WT\n",
+      "7   M07038     3         WT\n",
       "8   M07038     4      FxHET\n",
       "9   M07038     5      FxHET\n",
       "10  M07038     6      FxHET\n",
-      "11  M08024     1       FxWT\n",
-      "12  M08024     2       FxWT\n",
-      "13  M08024     3       FxWT\n",
+      "11  M08024     1         WT\n",
+      "12  M08024     2         WT\n",
+      "13  M08024     3         WT\n",
       "14  M08024     4      FxHET\n",
       "15  M08024     5      FxHET\n",
       "16  M08024     6      FxHET\n",
-      "17  M08029     1       FxWT\n",
-      "18  M08029     2       FxWT\n",
-      "19  M08029     3       FxWT\n",
-      "20  M08034     1       FxWT\n",
-      "21  M08034     2       FxWT\n",
-      "22  M08034     3       FxWT\n",
+      "17  M08029     1         WT\n",
+      "18  M08029     2         WT\n",
+      "19  M08029     3         WT\n",
+      "20  M08034     1         WT\n",
+      "21  M08034     2         WT\n",
+      "22  M08034     3         WT\n",
       "\n",
       "Outliers identified by IQR Filter:\n",
-      "Empty DataFrame\n",
-      "Columns: [Chip_ID, Well, NeuronType]\n",
-      "Index: []\n",
-      "\n",
-      "Outliers identified by Z-score Filter:\n",
       "  Chip_ID  Well NeuronType\n",
       "0  M06804     4      FxHET\n",
-      "1  M07038     3       FxWT\n",
-      "2  M07038     6      FxHET\n",
-      "3  M08024     3       FxWT\n"
+      "1  M06844     4      FxHET\n",
+      "2  M06844     5      FxHET\n",
+      "3  M07038     5      FxHET\n",
+      "4  M07038     6      FxHET\n",
+      "5  M08020     6      FxHET\n",
+      "6  M08024     2         WT\n",
+      "\n",
+      "Outliers identified by Z-score Filter:\n",
+      "Empty DataFrame\n",
+      "Columns: [Chip_ID, Well, NeuronType]\n",
+      "Index: []\n"
      ]
     },
     {
@@ -336,13 +358,13 @@
        "      <th>0</th>\n",
        "      <td>M06804</td>\n",
        "      <td>1</td>\n",
-       "      <td>FxWT</td>\n",
+       "      <td>WT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>M06804</td>\n",
        "      <td>2</td>\n",
-       "      <td>FxWT</td>\n",
+       "      <td>WT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -354,7 +376,7 @@
        "      <th>3</th>\n",
        "      <td>M06844</td>\n",
        "      <td>1</td>\n",
-       "      <td>FxWT</td>\n",
+       "      <td>WT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -372,13 +394,13 @@
        "      <th>6</th>\n",
        "      <td>M07038</td>\n",
        "      <td>2</td>\n",
-       "      <td>FxWT</td>\n",
+       "      <td>WT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>M07038</td>\n",
        "      <td>3</td>\n",
-       "      <td>FxWT</td>\n",
+       "      <td>WT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -400,75 +422,81 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
-       "      <td>M08024</td>\n",
-       "      <td>1</td>\n",
-       "      <td>FxWT</td>\n",
+       "      <td>M08020</td>\n",
+       "      <td>6</td>\n",
+       "      <td>FxHET</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>M08024</td>\n",
-       "      <td>2</td>\n",
-       "      <td>FxWT</td>\n",
+       "      <td>1</td>\n",
+       "      <td>WT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>M08024</td>\n",
-       "      <td>3</td>\n",
-       "      <td>FxWT</td>\n",
+       "      <td>2</td>\n",
+       "      <td>WT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
+       "      <td>M08024</td>\n",
+       "      <td>3</td>\n",
+       "      <td>WT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
        "      <td>M08024</td>\n",
        "      <td>4</td>\n",
        "      <td>FxHET</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15</th>\n",
+       "      <th>16</th>\n",
        "      <td>M08024</td>\n",
        "      <td>5</td>\n",
        "      <td>FxHET</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16</th>\n",
+       "      <th>17</th>\n",
        "      <td>M08024</td>\n",
        "      <td>6</td>\n",
        "      <td>FxHET</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>M08029</td>\n",
-       "      <td>1</td>\n",
-       "      <td>FxWT</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>18</th>\n",
        "      <td>M08029</td>\n",
-       "      <td>2</td>\n",
-       "      <td>FxWT</td>\n",
+       "      <td>1</td>\n",
+       "      <td>WT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
        "      <td>M08029</td>\n",
-       "      <td>3</td>\n",
-       "      <td>FxWT</td>\n",
+       "      <td>2</td>\n",
+       "      <td>WT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
-       "      <td>M08034</td>\n",
-       "      <td>1</td>\n",
-       "      <td>FxWT</td>\n",
+       "      <td>M08029</td>\n",
+       "      <td>3</td>\n",
+       "      <td>WT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>21</th>\n",
        "      <td>M08034</td>\n",
-       "      <td>2</td>\n",
-       "      <td>FxWT</td>\n",
+       "      <td>1</td>\n",
+       "      <td>WT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22</th>\n",
        "      <td>M08034</td>\n",
+       "      <td>2</td>\n",
+       "      <td>WT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>M08034</td>\n",
        "      <td>3</td>\n",
-       "      <td>FxWT</td>\n",
+       "      <td>WT</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -476,32 +504,33 @@
       ],
       "text/plain": [
        "   Chip_ID  Well NeuronType\n",
-       "0   M06804     1       FxWT\n",
-       "1   M06804     2       FxWT\n",
+       "0   M06804     1         WT\n",
+       "1   M06804     2         WT\n",
        "2   M06804     4      FxHET\n",
-       "3   M06844     1       FxWT\n",
+       "3   M06844     1         WT\n",
        "4   M06844     4      FxHET\n",
        "5   M06844     5      FxHET\n",
-       "6   M07038     2       FxWT\n",
-       "7   M07038     3       FxWT\n",
+       "6   M07038     2         WT\n",
+       "7   M07038     3         WT\n",
        "8   M07038     4      FxHET\n",
        "9   M07038     5      FxHET\n",
        "10  M07038     6      FxHET\n",
-       "11  M08024     1       FxWT\n",
-       "12  M08024     2       FxWT\n",
-       "13  M08024     3       FxWT\n",
-       "14  M08024     4      FxHET\n",
-       "15  M08024     5      FxHET\n",
-       "16  M08024     6      FxHET\n",
-       "17  M08029     1       FxWT\n",
-       "18  M08029     2       FxWT\n",
-       "19  M08029     3       FxWT\n",
-       "20  M08034     1       FxWT\n",
-       "21  M08034     2       FxWT\n",
-       "22  M08034     3       FxWT"
+       "11  M08020     6      FxHET\n",
+       "12  M08024     1         WT\n",
+       "13  M08024     2         WT\n",
+       "14  M08024     3         WT\n",
+       "15  M08024     4      FxHET\n",
+       "16  M08024     5      FxHET\n",
+       "17  M08024     6      FxHET\n",
+       "18  M08029     1         WT\n",
+       "19  M08029     2         WT\n",
+       "20  M08029     3         WT\n",
+       "21  M08034     1         WT\n",
+       "22  M08034     2         WT\n",
+       "23  M08034     3         WT"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -549,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -648,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -687,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -759,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -803,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -945,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1011,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1068,7 +1097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
