dynamic threshold and div selection

--- a/NetworkAnalysis/ActivityQuality/activity_outlier_filter.ipynb
+++ b/NetworkAnalysis/ActivityQuality/activity_outlier_filter.ipynb
@@ -9,36 +9,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Final version, add neuron type to the output\n",
+    "# Final version, dynamic threshold and div selection\n",
     "import pandas as pd\n",
     "from scipy import stats\n",
     "\n",
-    "def threshold_filter(datapath):\n",
+    "def threshold_filter(datapath,threshold,upperdiv,lowerdiv):\n",
     "    data = pd.read_csv(datapath)\n",
-    "    data_subset = data[data['DIV'] > 7]\n",
-    "    data_outliers = data_subset[data_subset['Active_area'] <= 35]\n",
+    "    data_subset = data[(data['DIV'] > lowerdiv) & (data['DIV'] < upperdiv)].copy()\n",
+    "    data_outliers = data_subset[data_subset['Active_area'] <= threshold]\n",
     "    data_outliers_unique = data_outliers[['Chip_ID', 'Well', 'NeuronType']].drop_duplicates()\n",
     "    return data_outliers_unique\n",
     "\n",
-    "# def iqr_filter(datapath):\n",
-    "#     data = pd.read_csv(datapath)\n",
-    "#     data_subset = data[data['DIV'] > 7].copy()\n",
-    "#     Q1 = data_subset.groupby('DIV')['Active_area'].transform(lambda x: x.quantile(0.25))\n",
-    "#     Q3 = data_subset.groupby('DIV')['Active_area'].transform(lambda x: x.quantile(0.75))\n",
-    "#     IQR = Q3 - Q1\n",
-    "#     lower_bound = Q1 - 1.5 * IQR\n",
-    "#     upper_bound = Q3 + 1.5 * IQR\n",
-    "#     data_iqr_outliers = data_subset[(data_subset['Active_area'] < lower_bound) | (data_subset['Active_area'] > upper_bound)]\n",
-    "#     data_iqr_outliers_unique = data_iqr_outliers[['Chip_ID', 'Well', 'NeuronType']].drop_duplicates()\n",
-    "#     return data_iqr_outliers_unique\n",
     "\n",
-    "def iqr_filter(datapath):\n",
+    "def iqr_filter(datapath,upperdiv,lowerdiv):\n",
     "    data = pd.read_csv(datapath)\n",
-    "    data_subset = data[data['DIV'] > 7].copy()\n",
+    "    data_subset = data[(data['DIV'] > lowerdiv) & (data['DIV'] < upperdiv)].copy()\n",
     "    Q1 = data_subset.groupby(['DIV', 'NeuronType'])['Active_area'].transform(lambda x: x.quantile(0.25))\n",
     "    Q3 = data_subset.groupby(['DIV', 'NeuronType'])['Active_area'].transform(lambda x: x.quantile(0.75))\n",
     "    IQR = Q3 - Q1\n",
@@ -49,19 +38,19 @@
     "    return data_iqr_outliers_unique\n",
     "\n",
     "\n",
-    "def z_score_filter(datapath):\n",
+    "def z_score_filter(datapath,upperdiv,lowerdiv):\n",
     "    data = pd.read_csv(datapath)\n",
-    "    data_subset = data[data['DIV'] > 7].copy()\n",
+    "    data_subset = data[(data['DIV'] > lowerdiv) & (data['DIV'] < upperdiv)].copy()\n",
     "    data_subset['Z_score'] = data_subset.groupby(['DIV', 'NeuronType'])['Active_area'].transform(lambda x: stats.zscore(x))\n",
     "    z_threshold = 2\n",
     "    data_z_outliers = data_subset[(data_subset['Z_score'] > z_threshold) | (data_subset['Z_score'] < -z_threshold)]\n",
     "    data_z_outliers_unique = data_z_outliers[['Chip_ID', 'Well', 'NeuronType']].drop_duplicates()\n",
     "    return data_z_outliers_unique\n",
     "\n",
-    "def combine_filters(datapath):\n",
-    "    outliers_threshold = threshold_filter(datapath)\n",
-    "    outliers_iqr = iqr_filter(datapath)\n",
-    "    outliers_z_score = z_score_filter(datapath)\n",
+    "def combine_filters(datapath,threshold,upperdiv,lowerdiv):\n",
+    "    outliers_threshold = threshold_filter(datapath,threshold,upperdiv,lowerdiv)\n",
+    "    outliers_iqr = iqr_filter(datapath,upperdiv,lowerdiv)\n",
+    "    outliers_z_score = z_score_filter(datapath,upperdiv,lowerdiv)\n",
     "    combined_outliers = pd.concat([outliers_threshold, outliers_iqr, outliers_z_score]).drop_duplicates()\n",
     "    combined_outliers.sort_values(by=['Chip_ID', 'Well'], inplace=True)\n",
     "    combined_outliers.reset_index(drop=True, inplace=True)\n",
@@ -76,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +80,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "upperdiv=28\n",
+    "lowerdiv=7\n",
+    "threshold=35"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -133,35 +133,28 @@
        "      <td>6</td>\n",
        "      <td>HET</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>188</th>\n",
-       "      <td>M07299</td>\n",
-       "      <td>5</td>\n",
-       "      <td>HET</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    Chip_ID  Well NeuronType\n",
-       "48   M07299     3        HOM\n",
-       "85   M08034     6        HET\n",
-       "188  M07299     5        HET"
+       "   Chip_ID  Well NeuronType\n",
+       "48  M07299     3        HOM\n",
+       "85  M08034     6        HET"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "z_score_filter(knct4_path)"
+    "z_score_filter(knct4_path,upperdiv,lowerdiv)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -185,8 +178,7 @@
       "Outliers identified by Z-score Filter:\n",
       "  Chip_ID  Well NeuronType\n",
       "0  M07299     3        HOM\n",
-      "1  M07299     5        HET\n",
-      "2  M08034     6        HET\n"
+      "1  M08034     6        HET\n"
      ]
     },
     {
@@ -266,277 +258,14 @@
        "5  M08034     6        HET"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Example usage\n",
-    "combine_filters(knct4_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Outliers identified by Threshold Filter:\n",
-      "   Chip_ID  Well NeuronType\n",
-      "0   M06804     1         WT\n",
-      "1   M06804     2         WT\n",
-      "2   M06804     4      FxHET\n",
-      "3   M06844     1         WT\n",
-      "4   M06844     4      FxHET\n",
-      "5   M06844     5      FxHET\n",
-      "6   M07038     2         WT\n",
-      "7   M07038     3         WT\n",
-      "8   M07038     4      FxHET\n",
-      "9   M07038     5      FxHET\n",
-      "10  M07038     6      FxHET\n",
-      "11  M08024     1         WT\n",
-      "12  M08024     2         WT\n",
-      "13  M08024     3         WT\n",
-      "14  M08024     4      FxHET\n",
-      "15  M08024     5      FxHET\n",
-      "16  M08024     6      FxHET\n",
-      "17  M08029     1         WT\n",
-      "18  M08029     2         WT\n",
-      "19  M08029     3         WT\n",
-      "20  M08034     1         WT\n",
-      "21  M08034     2         WT\n",
-      "22  M08034     3         WT\n",
-      "\n",
-      "Outliers identified by IQR Filter:\n",
-      "  Chip_ID  Well NeuronType\n",
-      "0  M06804     4      FxHET\n",
-      "1  M06844     4      FxHET\n",
-      "2  M06844     5      FxHET\n",
-      "3  M07038     5      FxHET\n",
-      "4  M07038     6      FxHET\n",
-      "5  M08020     6      FxHET\n",
-      "6  M08024     2         WT\n",
-      "\n",
-      "Outliers identified by Z-score Filter:\n",
-      "Empty DataFrame\n",
-      "Columns: [Chip_ID, Well, NeuronType]\n",
-      "Index: []\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Chip_ID</th>\n",
-       "      <th>Well</th>\n",
-       "      <th>NeuronType</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>M06804</td>\n",
-       "      <td>1</td>\n",
-       "      <td>WT</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>M06804</td>\n",
-       "      <td>2</td>\n",
-       "      <td>WT</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>M06804</td>\n",
-       "      <td>4</td>\n",
-       "      <td>FxHET</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>M06844</td>\n",
-       "      <td>1</td>\n",
-       "      <td>WT</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>M06844</td>\n",
-       "      <td>4</td>\n",
-       "      <td>FxHET</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>M06844</td>\n",
-       "      <td>5</td>\n",
-       "      <td>FxHET</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>M07038</td>\n",
-       "      <td>2</td>\n",
-       "      <td>WT</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>M07038</td>\n",
-       "      <td>3</td>\n",
-       "      <td>WT</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>M07038</td>\n",
-       "      <td>4</td>\n",
-       "      <td>FxHET</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>M07038</td>\n",
-       "      <td>5</td>\n",
-       "      <td>FxHET</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>M07038</td>\n",
-       "      <td>6</td>\n",
-       "      <td>FxHET</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>M08020</td>\n",
-       "      <td>6</td>\n",
-       "      <td>FxHET</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>M08024</td>\n",
-       "      <td>1</td>\n",
-       "      <td>WT</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>M08024</td>\n",
-       "      <td>2</td>\n",
-       "      <td>WT</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>M08024</td>\n",
-       "      <td>3</td>\n",
-       "      <td>WT</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>M08024</td>\n",
-       "      <td>4</td>\n",
-       "      <td>FxHET</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>M08024</td>\n",
-       "      <td>5</td>\n",
-       "      <td>FxHET</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>M08024</td>\n",
-       "      <td>6</td>\n",
-       "      <td>FxHET</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>M08029</td>\n",
-       "      <td>1</td>\n",
-       "      <td>WT</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>M08029</td>\n",
-       "      <td>2</td>\n",
-       "      <td>WT</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>M08029</td>\n",
-       "      <td>3</td>\n",
-       "      <td>WT</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>M08034</td>\n",
-       "      <td>1</td>\n",
-       "      <td>WT</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>M08034</td>\n",
-       "      <td>2</td>\n",
-       "      <td>WT</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>M08034</td>\n",
-       "      <td>3</td>\n",
-       "      <td>WT</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Chip_ID  Well NeuronType\n",
-       "0   M06804     1         WT\n",
-       "1   M06804     2         WT\n",
-       "2   M06804     4      FxHET\n",
-       "3   M06844     1         WT\n",
-       "4   M06844     4      FxHET\n",
-       "5   M06844     5      FxHET\n",
-       "6   M07038     2         WT\n",
-       "7   M07038     3         WT\n",
-       "8   M07038     4      FxHET\n",
-       "9   M07038     5      FxHET\n",
-       "10  M07038     6      FxHET\n",
-       "11  M08020     6      FxHET\n",
-       "12  M08024     1         WT\n",
-       "13  M08024     2         WT\n",
-       "14  M08024     3         WT\n",
-       "15  M08024     4      FxHET\n",
-       "16  M08024     5      FxHET\n",
-       "17  M08024     6      FxHET\n",
-       "18  M08029     1         WT\n",
-       "19  M08029     2         WT\n",
-       "20  M08029     3         WT\n",
-       "21  M08034     1         WT\n",
-       "22  M08034     2         WT\n",
-       "23  M08034     3         WT"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "combine_filters(cdkl4_t2_path)"
+    "combine_filters(knct4_path,threshold,upperdiv,lowerdiv)"
    ]
   },
   {
@@ -1150,7 +879,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
