dynamic threshold and div selection, cancel iqr filter

--- a/NetworkAnalysis/ActivityQuality/activity_outlier_filter.ipynb
+++ b/NetworkAnalysis/ActivityQuality/activity_outlier_filter.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,17 +25,17 @@
     "    return data_outliers_unique\n",
     "\n",
     "\n",
-    "def iqr_filter(datapath,upperdiv,lowerdiv):\n",
-    "    data = pd.read_csv(datapath)\n",
-    "    data_subset = data[(data['DIV'] > lowerdiv) & (data['DIV'] < upperdiv)].copy()\n",
-    "    Q1 = data_subset.groupby(['DIV', 'NeuronType'])['Active_area'].transform(lambda x: x.quantile(0.25))\n",
-    "    Q3 = data_subset.groupby(['DIV', 'NeuronType'])['Active_area'].transform(lambda x: x.quantile(0.75))\n",
-    "    IQR = Q3 - Q1\n",
-    "    lower_bound = Q1 - 1.5 * IQR\n",
-    "    upper_bound = Q3 + 1.5 * IQR\n",
-    "    data_iqr_outliers = data_subset[(data_subset['Active_area'] < lower_bound) | (data_subset['Active_area'] > upper_bound)]\n",
-    "    data_iqr_outliers_unique = data_iqr_outliers[['Chip_ID', 'Well', 'NeuronType']].drop_duplicates()\n",
-    "    return data_iqr_outliers_unique\n",
+    "# def iqr_filter(datapath,upperdiv,lowerdiv):\n",
+    "#     data = pd.read_csv(datapath)\n",
+    "#     data_subset = data[(data['DIV'] > lowerdiv) & (data['DIV'] < upperdiv)].copy()\n",
+    "#     Q1 = data_subset.groupby(['DIV', 'NeuronType'])['Active_area'].transform(lambda x: x.quantile(0.25))\n",
+    "#     Q3 = data_subset.groupby(['DIV', 'NeuronType'])['Active_area'].transform(lambda x: x.quantile(0.75))\n",
+    "#     IQR = Q3 - Q1\n",
+    "#     lower_bound = Q1 - 1.5 * IQR\n",
+    "#     upper_bound = Q3 + 1.5 * IQR\n",
+    "#     data_iqr_outliers = data_subset[(data_subset['Active_area'] < lower_bound) | (data_subset['Active_area'] > upper_bound)]\n",
+    "#     data_iqr_outliers_unique = data_iqr_outliers[['Chip_ID', 'Well', 'NeuronType']].drop_duplicates()\n",
+    "#     return data_iqr_outliers_unique\n",
     "\n",
     "\n",
     "def z_score_filter(datapath,upperdiv,lowerdiv):\n",
@@ -49,15 +49,12 @@
     "\n",
     "def combine_filters(datapath,threshold,upperdiv,lowerdiv):\n",
     "    outliers_threshold = threshold_filter(datapath,threshold,upperdiv,lowerdiv)\n",
-    "    outliers_iqr = iqr_filter(datapath,upperdiv,lowerdiv)\n",
     "    outliers_z_score = z_score_filter(datapath,upperdiv,lowerdiv)\n",
-    "    combined_outliers = pd.concat([outliers_threshold, outliers_iqr, outliers_z_score]).drop_duplicates()\n",
+    "    combined_outliers = pd.concat([outliers_threshold,  outliers_z_score]).drop_duplicates()\n",
     "    combined_outliers.sort_values(by=['Chip_ID', 'Well'], inplace=True)\n",
     "    combined_outliers.reset_index(drop=True, inplace=True)\n",
     "    print(\"Outliers identified by Threshold Filter:\")\n",
     "    print(outliers_threshold.sort_values(by=['Chip_ID', 'Well']).reset_index(drop=True))\n",
-    "    print(\"\\nOutliers identified by IQR Filter:\")\n",
-    "    print(outliers_iqr.sort_values(by=['Chip_ID', 'Well']).reset_index(drop=True))\n",
     "    print(\"\\nOutliers identified by Z-score Filter:\")\n",
     "    print(outliers_z_score.sort_values(by=['Chip_ID', 'Well']).reset_index(drop=True))\n",
     "    return combined_outliers"
@@ -65,25 +62,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Example usage\n",
-    "combined_path = \"/Users/liufanling/Library/CloudStorage/OneDrive-Personal/1 UC DAVIS/2024 Summer/CSRA/Outputs/SYNGAP_T1_ALL/Activity/Compiled_ActivityScan.csv\"\n",
-    "therapy_path = \"/Users/liufanling/Library/CloudStorage/OneDrive-Personal/1 UC DAVIS/2024 Summer/CSRA/Outputs/syngap_Therapy_t1/Activity/Compiled_ActivityScan.csv\"\n",
-    "syngap_path = \"/Users/liufanling/Library/CloudStorage/OneDrive-Personal/1 UC DAVIS/2024 Summer/CSRA/Outputs/syngap_t1/Activity/Compiled_ActivityScan.csv\"\n",
-    "knct3_path = \"/Users/liufanling/Library/CloudStorage/OneDrive-Personal/1 UC DAVIS/2024 Summer/CSRA/Outputs/KCNT1_T3/Activity/Compiled_ActivityScan.csv\"\n",
     "knct4_path = \"/Users/liufanling/Library/CloudStorage/OneDrive-Personal/1 UC DAVIS/2024 Summer/CSRA/Outputs/KCNT1_T4/Activity/Compiled_ActivityScan.csv\"\n",
-    "cdkl4_t2_path = \"/Users/liufanling/Library/CloudStorage/OneDrive-Personal/1 UC DAVIS/2024 Summer/CSRA/QualityCheck/QuickCheck/CDKL5-E6D_T2_C1_05212024/Activity/Compiled_ActivityScan.csv\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "upperdiv=28\n",
     "lowerdiv=7\n",
     "threshold=35"
@@ -91,7 +75,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Chip_ID</th>\n",
+       "      <th>Well</th>\n",
+       "      <th>NeuronType</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>M07299</td>\n",
+       "      <td>1</td>\n",
+       "      <td>HOM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48</th>\n",
+       "      <td>M07299</td>\n",
+       "      <td>3</td>\n",
+       "      <td>HOM</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Chip_ID  Well NeuronType\n",
+       "46  M07299     1        HOM\n",
+       "48  M07299     3        HOM"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "threshold_filter(knct4_path,threshold,upperdiv,lowerdiv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +190,7 @@
        "85  M08034     6        HET"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -165,15 +212,6 @@
       "  Chip_ID  Well NeuronType\n",
       "0  M07299     1        HOM\n",
       "1  M07299     3        HOM\n",
-      "\n",
-      "Outliers identified by IQR Filter:\n",
-      "  Chip_ID  Well NeuronType\n",
-      "0  M07299     1        HOM\n",
-      "1  M07299     3        HOM\n",
-      "2  M07299     5        HET\n",
-      "3  M08026     4        HET\n",
-      "4  M08034     3        HOM\n",
-      "5  M08034     6        HET\n",
       "\n",
       "Outliers identified by Z-score Filter:\n",
       "  Chip_ID  Well NeuronType\n",
@@ -222,24 +260,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>M07299</td>\n",
-       "      <td>5</td>\n",
-       "      <td>HET</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>M08026</td>\n",
-       "      <td>4</td>\n",
-       "      <td>HET</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>M08034</td>\n",
-       "      <td>3</td>\n",
-       "      <td>HOM</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
        "      <td>M08034</td>\n",
        "      <td>6</td>\n",
        "      <td>HET</td>\n",
@@ -252,13 +272,10 @@
        "  Chip_ID  Well NeuronType\n",
        "0  M07299     1        HOM\n",
        "1  M07299     3        HOM\n",
-       "2  M07299     5        HET\n",
-       "3  M08026     4        HET\n",
-       "4  M08034     3        HOM\n",
-       "5  M08034     6        HET"
+       "2  M08034     6        HET"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,6 +283,13 @@
    "source": [
     "# Example usage\n",
     "combine_filters(knct4_path,threshold,upperdiv,lowerdiv)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_____________________________________"
    ]
   },
   {
