--- a/StimulationAnalysis/global_stim_workbook.ipynb
+++ b/StimulationAnalysis/global_stim_workbook.ipynb
@@ -9,7 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Combined and grouped data saved to /mnt/disk15tb/mmpatil/MEA_Analysis_New/StimulationAnalysis/new//combined_grouped_metrics.csv\n"
+      "Combined and grouped data saved to /mnt/disk15tb/mmpatil/MEA_Analysis_FEB25/StimulationAnalysis/new//combined_grouped_metrics.csv\n"
      ]
     }
    ],
@@ -18,7 +18,7 @@
     "import pandas as pd\n",
     "\n",
     "# Set the base directory\n",
-    "base_dir = \"/mnt/disk15tb/mmpatil/MEA_Analysis_New/StimulationAnalysis/new/\"\n",
+    "base_dir = \"/mnt/disk15tb/mmpatil/MEA_Analysis_FEB25/StimulationAnalysis/new/\"\n",
     "\n",
     "# List to store dataframes\n",
     "df_list = []\n",
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +458,7 @@
        "       134, 136, 138])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,33 +469,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "All plots grouped by renamed Run IDs saved to stimulation_plots_with_percentage_change_Dec28.pdf\n"
+      "All plots saved with control wells in red shades and stimulated wells in blue shades to stimulation_plots_with_colors.pdf\n"
      ]
     }
    ],
    "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from matplotlib.backends.backend_pdf import PdfPages\n",
+    "\n",
     "# Dictionary to rename Assay Run IDs\n",
-    "# Baseline ID\n",
     "baseline_id = 89\n",
     "\n",
-    "# rename_assay_run_ids = {\n",
-    "#     64: \"Baseline\",\n",
-    "#     67: \"Post Stimulation 1\",\n",
-    "#     69: \"Post Stimulation 2\"\n",
-    "  \n",
-    "# }\n",
     "rename_assay_run_ids = {\n",
     "    89: \"Baseline\",\n",
-    "    106: \"Post Stimulation 10min\",\n",
-    "    108: \"Post Stimulation 20min\",\n",
-    "    110: \"Post Stimulation 30min\",\n",
+    "    106: \"Post Stimulation 10 min\",\n",
+    "    108: \"Post Stimulation 20 min\",\n",
+    "    110: \"Post Stimulation 30 min\",\n",
     "    113: \"Post Stimulation 10 min\",\n",
     "    115: \"Post Stimulation 20 min\",\n",
     "    117: \"Post Stimulation 30 min\",\n",
@@ -508,18 +506,18 @@
     "    134: \"Post Stimulation 10 min\",\n",
     "    136: \"Post Stimulation 20 min\",\n",
     "    138: \"Post Stimulation 30 min\"\n",
-    "\n",
-    "\n",
     "}\n",
     "\n",
-    "# Extract metrics that have \"Mean\" in the column name\n",
+    "# Extract relevant metrics\n",
     "metrics = [col for col in combined_df.columns if \"Mean\" in col]\n",
-    "metrics = ['Burst Frequency'] + metrics  # Add 'Burst Frequency' to metrics\n",
+    "metrics = ['Burst Frequency'] + metrics  # Ensure 'Burst Frequency' is included\n",
     "\n",
-    "\n",
+    "# Define color maps: Red shades for control, Blue shades for stimulated\n",
+    "control_colors = plt.cm.Reds(np.linspace(0.4, 1, len(control_wells)))\n",
+    "stimulated_colors = plt.cm.Blues(np.linspace(0.4, 1, len(stimulated_wells)))\n",
     "\n",
     "# Create a PDF to save all plots\n",
-    "pdf_filename = \"stimulation_plots_with_percentage_change_Dec28.pdf\"\n",
+    "pdf_filename = \"stimulation_plots_with_colors.pdf\"\n",
     "with PdfPages(pdf_filename) as pdf:\n",
     "    for metric in metrics:\n",
     "        # === Original Plot: Absolute Values ===\n",
@@ -530,39 +528,35 @@
     "\n",
     "        # Bar width\n",
     "        bar_width = 0.15\n",
-    "        x_positions = range(len(run_ids))  # X-axis positions for Run IDs\n",
-    "\n",
-    "        # Offset for each well within a run ID group\n",
-    "        offsets = {\n",
-    "            \"control\": [i * bar_width for i in range(len(control_wells))],\n",
-    "            \"stimulated\": [i * bar_width for i in range(len(stimulated_wells))]\n",
-    "        }\n",
+    "        x_positions = np.arange(len(run_ids))  # X-axis positions for Run IDs\n",
     "\n",
     "        # Plot control wells grouped by run IDs\n",
-    "        for idx, well in enumerate(control_wells):\n",
+    "        for idx, (well, color) in enumerate(zip(control_wells, control_colors)):\n",
     "            well_data = control_data[control_data['Well Number'] == well]\n",
     "            well_means = [well_data[well_data['Assay Run ID'] == run][metric].mean() for run in run_ids]\n",
     "            plt.bar(\n",
-    "                x=[x + offsets['control'][idx] for x in x_positions],\n",
+    "                x=[x + idx * bar_width for x in x_positions],\n",
     "                height=well_means,\n",
     "                label=f\"Control Well {well}\",\n",
+    "                color=color,\n",
     "                alpha=0.7,\n",
     "                width=bar_width\n",
     "            )\n",
     "\n",
     "        # Plot stimulated wells grouped by run IDs\n",
-    "        for idx, well in enumerate(stimulated_wells):\n",
+    "        for idx, (well, color) in enumerate(zip(stimulated_wells, stimulated_colors)):\n",
     "            well_data = stimulated_data[stimulated_data['Well Number'] == well]\n",
     "            well_means = [well_data[well_data['Assay Run ID'] == run][metric].mean() for run in run_ids]\n",
     "            plt.bar(\n",
-    "                x=[x + offsets['stimulated'][idx] + len(control_wells) * bar_width for x in x_positions],\n",
+    "                x=[x + (idx + len(control_wells)) * bar_width for x in x_positions],\n",
     "                height=well_means,\n",
     "                label=f\"Stimulated Well {well}\",\n",
+    "                color=color,\n",
     "                alpha=0.7,\n",
     "                width=bar_width\n",
     "            )\n",
     "\n",
-    "        # Rename the Assay Run IDs for x-axis labels\n",
+    "        # Rename Assay Run IDs for x-axis labels\n",
     "        renamed_run_ids = [rename_assay_run_ids.get(run, run) for run in run_ids]\n",
     "\n",
     "        # Add titles and labels\n",
@@ -586,18 +580,18 @@
     "\n",
     "        # Calculate percentage change from baseline\n",
     "        baseline_means = combined_df[combined_df['Assay Run ID'] == baseline_id].set_index('Well Number')[metric]\n",
-    "        for idx, well in enumerate(control_wells + stimulated_wells):\n",
+    "\n",
+    "        for idx, (well, color) in enumerate(zip(control_wells + stimulated_wells, np.concatenate((control_colors, stimulated_colors)))):\n",
     "            well_data = combined_df[combined_df['Well Number'] == well]\n",
     "            pct_change = [\n",
     "                ((well_data[well_data['Assay Run ID'] == run][metric].mean() - baseline_means.get(well, 0)) / baseline_means.get(well, 1e-6)) * 100\n",
     "                for run in run_ids\n",
     "            ]\n",
-    "            offset_group = \"control\" if well in control_wells else \"stimulated\"\n",
-    "            offset_idx = idx % len(control_wells + stimulated_wells)  # Unique offset for each bar\n",
     "            plt.bar(\n",
-    "                x=[x + offset_idx * bar_width for x in x_positions],\n",
+    "                x=[x + idx * bar_width for x in x_positions],\n",
     "                height=pct_change,\n",
     "                label=f\"{'Control' if well in control_wells else 'Stimulated'} Well {well}\",\n",
+    "                color=color,\n",
     "                alpha=0.7,\n",
     "                width=bar_width\n",
     "            )\n",
@@ -618,12 +612,12 @@
     "        pdf.savefig()\n",
     "        plt.close()\n",
     "\n",
-    "print(f\"All plots grouped by renamed Run IDs saved to {pdf_filename}\")"
+    "print(f\"All plots saved with control wells in red shades and stimulated wells in blue shades to {pdf_filename}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +651,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
