--- a/IPNAnalysis/BrianSliceanalysis.ipynb
+++ b/IPNAnalysis/BrianSliceanalysis.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''some change is done'''"
+    "'''some change is done second attempt'''"
    ]
   },
   {
