--- a/IPNAnalysis/workbooks/consolidated_networkjsons.ipynb
+++ b/IPNAnalysis/workbooks/consolidated_networkjsons.ipynb
@@ -6679,7 +6679,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "ks4_env",
    "language": "python",
    "name": "python3"
   },
@@ -6693,7 +6693,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
